Método pra pegar Popups aleatoriamente
